# triangle_tutorial

./: CMakeLists.txt  README.md  config.h.in  main.cpp
shaders/: compile.sh  shader.vert
